--- a/css/demo.css
+++ b/css/demo.css
@@ -1,1 +1,274 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}body{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}*{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box}a{color:#CCC;text-decoration:none}html{background:#2F2F2F}body{background:#2F2F2F;min-height:100%;font-family:helvetica, arial, sans-serif;overflow-x:hidden;margin:0}body section.container{width:790px;margin:40px auto}body section.container h1{color:#DDD;font-size:3em;font-weight:bold;text-align:center;text-shadow:0 1px 0px #000;text-transform:lowercase;margin-bottom:0.2em}body section.container h2{font-size:0.8em;color:#666;text-align:center;margin-bottom:4em;text-shadow:0 1px 0px rgba(0, 0, 0, 0.5)}body section.container div#slider{-moz-border-radius:3px;-webkit-border-radius:3px;-o-border-radius:3px;-ms-border-radius:3px;-khtml-border-radius:3px;border-radius:3px;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;-ms-box-sizing:content-box;box-sizing:content-box;padding:20px;background:rgba(0, 0, 0, 0.3);-webkit-box-shadow:0 1px 0 rgba(255, 255, 255, 0.1), 0 0 8px rgba(0, 0, 0, 0.9) inset}body section.container div#slider div.fluxslider div.surface{width:100%;border:1px solid rgba(255, 255, 255, 0.1);-moz-box-sizing:content-box;-webkit-box-sizing:content-box;-ms-box-sizing:content-box;box-sizing:content-box}body section.container div#slider div.fluxslider ul.pagination{-moz-box-sizing:content-box;-webkit-box-sizing:content-box;-ms-box-sizing:content-box;box-sizing:content-box;padding:10px 0 !important;overflow:hidden}body section.container div#slider div.fluxslider ul.pagination li{text-indent:10000px;height:8px;width:8px;-moz-border-radius:10px;-webkit-border-radius:10px;-o-border-radius:10px;-ms-border-radius:10px;-khtml-border-radius:10px;border-radius:10px;background:rgba(0, 0, 0, 0.6);-webkit-box-shadow:0 1px 0 rgba(255, 255, 255, 0.1)}body section.container div#slider div.fluxslider ul.pagination li.current{background:rgba(255, 255, 255, 0.2)}footer{width:100%;text-align:center;font-size:0.7em;margin-top:4em;color:#666}footer p{margin-bottom:2em}body#transitiongallery section.container{width:960px}body#transitiongallery section.container div#slidercontainer{position:relative}body#transitiongallery section.container div#slidercontainer div#transitions{position:absolute;z-index:50;top:20px;right:20px;width:150px;font-size:0.85em}body#transitiongallery section.container div#slidercontainer div#transitions h2{font-size:1em;text-align:left;color:#CCC;font-weight:bold;margin-bottom:0.7em}body#transitiongallery section.container div#slidercontainer div#transitions ul{margin-bottom:1.5em}body#transitiongallery section.container div#slidercontainer div#transitions ul li{font-size:0.8em;margin-bottom:0.7em}body#transitiongallery section.container div#slidercontainer div#transitions ul li a{display:block;-moz-border-radius:3px;-webkit-border-radius:3px;-o-border-radius:3px;-ms-border-radius:3px;-khtml-border-radius:3px;border-radius:3px;padding:0.5em;background-image:-webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #444444), color-stop(100%, #333333));background-image:-webkit-linear-gradient(top, #444444,#333333);background-image:-moz-linear-gradient(top, #444444,#333333);background-image:-o-linear-gradient(top, #444444,#333333);background-image:-ms-linear-gradient(top, #444444,#333333);background-image:linear-gradient(top, #444444,#333333);border:1px solid rgba(255, 255, 255, 0.1);-webkit-box-shadow:0px 1px 0px rgba(0, 0, 0, 0.2) inset;-moz-box-shadow:0px 1px 0px rgba(0, 0, 0, 0.2) inset;-o-box-shadow:0px 1px 0px rgba(0, 0, 0, 0.2) inset;box-shadow:0px 1px 0px rgba(0, 0, 0, 0.2) inset;position:relative}body#transitiongallery section.container div#slidercontainer div#transitions ul li a:active{top:1px}body#transitiongallery section.container div#slidercontainer div#transitions ul li a.new:after{content:'New';font-size:0.8em;padding:0.2em 0.4em;color:#FFF;background-image:-webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dd4c10), color-stop(100%, #d23a13));background-image:-webkit-linear-gradient(top, #dd4c10,#d23a13);background-image:-moz-linear-gradient(top, #dd4c10,#d23a13);background-image:-o-linear-gradient(top, #dd4c10,#d23a13);background-image:-ms-linear-gradient(top, #dd4c10,#d23a13);background-image:linear-gradient(top, #dd4c10,#d23a13);border:1px solid #FFF;-moz-border-radius:4px;-webkit-border-radius:4px;-o-border-radius:4px;-ms-border-radius:4px;-khtml-border-radius:4px;border-radius:4px;-moz-box-shadow:0px 1px 3px rgba(0, 0, 0, 0.2);-webkit-box-shadow:0px 1px 3px rgba(0, 0, 0, 0.2);-o-box-shadow:0px 1px 3px rgba(0, 0, 0, 0.2);box-shadow:0px 1px 3px rgba(0, 0, 0, 0.2);position:absolute;top:-0.5em;right:-0.5em}
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, t, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
+}
+q, blockquote {
+  quotes: none;
+}
+q:before, q:after, blockquote:before, blockquote:after {
+  content: "";
+  content: none;
+}
+a img {
+  border: none;
+}
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+a {
+  color: #CCC;
+  text-decoration: none;
+}
+html {
+  background: #2F2F2F;
+}
+body {
+  background: #2F2F2F;
+  min-height: 100%;
+  font-family: helvetica,  arial,  sans-serif;
+  overflow-x: hidden;
+  margin: 20px;
+  color: #fff;
+}
+section.container {
+  max-width: 100%;
+  margin: 0 auto;
+}
+section.container h1 {
+  color: #DDD;
+  font-size: 3em;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 0 1px 0px #000;
+  margin-bottom: 0.2em;
+}
+section.container > h2 {
+  font-size: 0.8em;
+  color: #666;
+  text-align: center;
+  margin-bottom: 2em;
+  text-shadow: 0 1px 0px rgba(0,  0,  0,  0.5);
+}
+
+#transitiongallery section.container #slidercontainer { /* .gallery-wrapper */
+  margin: 0 0 30px;
+  max-width: 750px;
+  width: 100%;
+}
+
+section.container #slider { /* gallery-container */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  -ms-box-sizing: content-box;
+  box-sizing: content-box;
+  background: rgba(0,  0,  0,  0.3);
+  -webkit-box-shadow: 0 1px 0 rgba(255,  255,  255,  0.1),  0 0 8px rgba(0,  0,  0,  0.9) inset;
+  position: relative;
+  padding-top: 0px; /* adjustment for player controls or video sizing slightly off */
+  height: 0; /* fix for IE, to give the element "layout" */    
+}
+
+section.container #slider img {
+  width: 100% !important;
+  height: auto;  
+}  
+  
+section.container #slider .fluxslider { /* gallery */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;    
+}
+  
+section.container #slider .fluxslider .surface {
+  width: 100%;
+  height: 100%;    
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  -ms-box-sizing: content-box;
+  box-sizing: content-box;
+}
+
+.image1, .image2 {
+  background-size: 100% auto;   
+}  
+
+section.container #slider .fluxslider ul.pagination {
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  -ms-box-sizing: content-box;
+  box-sizing: content-box;
+  width: 100%;
+  position: absolute;
+  bottom: -30px;
+}
+section.container #slider .fluxslider ul.pagination li {
+  text-indent: 10000px;
+  height: 10px;
+  width: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -khtml-border-radius: 10px;
+  border-radius: 50%;
+  background: #969696;
+  -webkit-box-shadow: 0 -1px 1px rgba(0,  0,  0,  1);
+  box-shadow: 0 -1px 1px rgba(0,  0,  0,  1);
+}
+section.container #slider .fluxslider ul.pagination li.current {
+  background: #00b8e9;
+}
+footer {
+  width: 100%;
+  text-align: center;
+  font-size: 0.7em;
+  color: #666;
+  clear: both;
+  border-top: 1px solid rgba(255,  255,  255,  0.1);
+  padding-top: 20px;
+}
+footer p {
+  margin-bottom: 2em;
+}
+#transitiongallery section.container {
+  width: 750px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+#transitions {
+  font-size: 0.85em;
+}
+#transitions .pull-left {
+  float: left;
+  width: 45%;
+}
+h2 {
+  font-size: 1em;
+  text-align: left;
+  color: #CCC;
+  font-weight: bold;
+  margin-bottom: 0.7em;
+}
+#transitions ul {
+  margin-bottom: 1.5em;
+}
+#transitions ul li {
+  font-size: 0.8em;
+  margin-bottom: 0.7em;
+  float: left;
+  margin-right: 3px;
+}
+#transitions ul li a {
+  display: block;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  border-radius: 3px;
+  padding: 0.5em;
+  background-image: -webkit-gradient(linear,  50% 0%,  50% 100%,  color-stop(0%,  #444444),  color-stop(100%,  #333333));
+  background-image: -webkit-linear-gradient(top,  #444444, #333333);
+  background-image: -moz-linear-gradient(top,  #444444, #333333);
+  background-image: -o-linear-gradient(top,  #444444, #333333);
+  background-image: -ms-linear-gradient(top,  #444444, #333333);
+  background-image: linear-gradient(top,  #444444, #333333);
+  border: 1px solid rgba(255,  255,  255,  0.1);
+  -webkit-box-shadow: 0px 1px 0px rgba(0,  0,  0,  0.2) inset;
+  -moz-box-shadow: 0px 1px 0px rgba(0,  0,  0,  0.2) inset;
+  -o-box-shadow: 0px 1px 0px rgba(0,  0,  0,  0.2) inset;
+  box-shadow: 0px 1px 0px rgba(0,  0,  0,  0.2) inset;
+  position: relative;
+}
+#transitions ul li a:active {
+  top: 1px;
+}
+/*
+#transitions ul li a.new:after {
+  content: 'New';
+  font-size: 0.8em;
+  padding: 0.2em 0.4em;
+  color: #FFF;
+  background-image: -webkit-gradient(linear,  50% 0%,  50% 100%,  color-stop(0%,  #dd4c10),  color-stop(100%,  #d23a13));
+  background-image: -webkit-linear-gradient(top,  #dd4c10, #d23a13);
+  background-image: -moz-linear-gradient(top,  #dd4c10, #d23a13);
+  background-image: -o-linear-gradient(top,  #dd4c10, #d23a13);
+  background-image: -ms-linear-gradient(top,  #dd4c10, #d23a13);
+  background-image: linear-gradient(top,  #dd4c10, #d23a13);
+  border: 1px solid #FFF;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -o-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -khtml-border-radius: 4px;
+  border-radius: 4px;
+  -moz-box-shadow: 0px 1px 3px rgba(0,  0,  0,  0.2);
+  -webkit-box-shadow: 0px 1px 3px rgba(0,  0,  0,  0.2);
+  -o-box-shadow: 0px 1px 3px rgba(0,  0,  0,  0.2);
+  box-shadow: 0px 1px 3px rgba(0,  0,  0,  0.2);
+  position: absolute;
+  top: -0.5em;
+  right: -0.5em;
+}
+*/
+
+.with-bullets {
+  list-style: disc outside;
+  margin-left: 1.5em;  
+}  
+
+.with-bullets li {
+  list-style: disc;
+}
+
+.issues {
+  font-size: 12px;
+  line-height: 18px;
+  margin-bottom: 20px;  
+}  
+
+.clearfix {
+  *zoom: 1;
+}
+.clearfix:before,
+.clearfix:after {
+  display: table;
+  content: "";
+}
+.clearfix:after {
+  clear: both;
+}
+
+.hide {
+  display: none;
+} 
